@@ -5,6 +5,8 @@
 future release (aka current master branch):
 !  refactored gui code
 !  more secure handling of sonys self signed certificate
++  open configuration window when no configuration file is found
+-  fix changelog being cutoff in update notification window
 
 v007:
 -  fixed main window becoming malfunctional when pressing download in the queue window with an empty queue
